fix: collapsedWidth do not work on Sider

--- a/components/menu/style/index.less
+++ b/components/menu/style/index.less
@@ -472,7 +472,6 @@
   }
 
   &-inline-collapsed {
-    width: @menu-collapsed-width;
     > .@{menu-prefix-cls}-item,
     > .@{menu-prefix-cls}-item-group
       > .@{menu-prefix-cls}-item-group-list
@@ -483,7 +482,7 @@
       > .@{menu-prefix-cls}-submenu-title,
     > .@{menu-prefix-cls}-submenu > .@{menu-prefix-cls}-submenu-title {
       left: 0;
-      padding: 0 (@menu-collapsed-width - @menu-icon-size-lg) / 2;
+      padding: 0 ~'calc(50% - @{menu-icon-size-lg} / 2)';
       text-overflow: clip;
       .@{menu-prefix-cls}-submenu-arrow {
         display: none;
