--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -536,7 +536,6 @@
 @menu-inline-toplevel-item-height: 40px;
 @menu-item-height: 40px;
 @menu-item-group-height: @line-height-base;
-@menu-collapsed-width: 80px;
 @menu-bg: @component-background;
 @menu-popup-bg: @component-background;
 @menu-item-color: @text-color;
